feat: JWT 인증 및 보안 설정 이식 중간 커밋
- 기존 Spring Security 세션 기반 로그인(Web) 구조에 JWT 기반 인증(API) 로직 이식
- APILoginFilter, TokenCheckFilter, RefreshTokenFilter, APILoginSuccessHandler 추가
- JWTUtil, APIUserDetailsService 구성 완료
- CustomSecurityConfig에서 세션 기반(Form/OAuth2)과 JWT 기반(API) 인증 분리 작업 진행 중
- 현재 JWT 유저와 세션 유저 인가 설정 충돌 문제 해결 중 (필터 체인 분리 검토 단계)

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,17 @@ dependencies {
             "jakarta.annotation:jakarta.annotation-api",
             "com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
 
+    // ====================================
+    // JWT (io.jsonwebtoken) 관련 의존성 추가
+    // ====================================
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // ====================================
+    // Gson (JSON 직렬화용)
+    // ====================================
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 }
 
